--- a/css/style.css
+++ b/css/style.css
@@ -6,31 +6,44 @@
   --color-text-bl: #000000;
   --color-text-white: #ffffff;
 }
+/* fonts */
+
 
 header {
   background-color: var(--bg-dark);
 }
 
+.section-offset {
+  padding: 100px 0;
+}
 
 /* nav */
 
-.nav-list__link,
+.menu__link,
 .nav-basket__link {
   color: var(--color-text-white);
 }
-
-.nav-list__link:hover {
+.menu__link:hover {
   color: var(--orange);
 }
 
-.nav-basket__link {
+.basket__link {
   position: relative;
 }
 
-.nav-basket__counter {
+.basket__counter {
+  display: -webkit-box;
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+
+  display: -ms-flexbox;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
   width: 16px;
   height: 16px;
   border-radius: 50%;
@@ -49,14 +62,54 @@ header {
 
 .nav__btn {
   background-color: var(--color-text-white);
+  -webkit-transition: all .1s linear;
+  -o-transition: all .1s linear;
   transition: all .1s linear;
 }
 
 .nav__btn:active {
   background-color: var(--orange);
 }
-/* .d-flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+
+/* immunity */
+
+.immunity {
+  /* height: 872px; */
+  background-color: var(--bg-yellow);
+  background-image: url(/img/Mask\ Group.png);
+  background-repeat: no-repeat;
+  background-position: 90% 50%;
+  background-size: 35%;
+}
+
+.immunity__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: calc(1rem + 6vw);
+  color: white;
+  text-transform: uppercase;
+  /* line-height: 4rem; */
+}
+
+.immunity__descr {
+  color: var(--color-text-bl);
+  font-style: normal;
+  font-weight: 400;
+  font-size: calc(0.3rem + 1vw);
+  line-height: calc(0.3rem + 1vw);
+}
+
+.immunity__title-small {
+  color: var(--color-text-bl);
+  font-weight: 700;
+  font-size: calc(0.5rem + 1vw);
+  line-height: calc(0.5rem + 1vw);
+  text-transform: uppercase;
+}
+
+.immunity__descr-small {
+  color: var(--color-text-bl);
+  font-weight: 400;
+  font-size: calc(0.2rem + 1vw);
+  line-height: calc(0.2rem + 1vw);
+}
