--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,6 @@ header {
 
 .immunity {
   background-color: var(--bg-yellow);
-  /* background-image: url(/img/Mask\ Group.png);
-  background-repeat: no-repeat;
-  background-position: 90% 50%;
-  background-size: 35%; */
 }
 
 .immunity__title {
@@ -87,7 +83,7 @@ header {
   font-size: calc(1em + 6vw);
   color: white;
   text-transform: uppercase;
-  /* line-height: 4rem; */
+  z-index: 2;
 }
 
 .immunity__descr {
@@ -109,13 +105,9 @@ header {
 .immunity__descr-small {
   color: var(--color-text-bl);
   font-weight: 400;
-  font-size: calc(0.2rem + .8vw);
-  line-height: calc(0.2rem + .8vw);
+  font-size: calc(0.3rem + .7vw);
+  line-height: calc(0.3rem + .7vw);
 }
-
-/* .immunity__list {
-  position: sticky; 
-} */
 
 .container-relative {
   position: relative;
@@ -123,6 +115,15 @@ header {
 
 .b-img {
   position: absolute;
+  width: 50%;
+  height: 110%;
+  left: 50%;
+  top: 0;
+}
+
+.immunity-bg__img {
+  max-width: 100%;
+  height: 100%;
 }
 
 /* buy */
